--- a/css/src/components/form/textarea.scss
+++ b/css/src/components/form/textarea.scss
@@ -51,8 +51,12 @@ $textarea-focus-box-shadow-size: 0 0 0 0.125rem !default;
 	}
 
 	@include focus-visible {
+		@extend %focus;
+
 		border-color: $textarea-focus-border-color;
-		outline: none !important;
+		outline-color: transparent;
+		outline-offset: 0;
+		outline-style: solid;
 		box-shadow: $textarea-focus-box-shadow-size $textarea-focus-border-color;
 	}
 
@@ -64,15 +68,14 @@ $textarea-focus-box-shadow-size: 0 0 0 0.125rem !default;
 		border-color: $textarea-danger-border-color;
 
 		@include focus-visible() {
-			outline: none !important;
 			box-shadow: $textarea-focus-box-shadow-size $textarea-danger-border-color;
 		}
 	}
 
 	&.textarea-success {
 		border-color: $textarea-success-border-color;
+
 		@include focus-visible() {
-			outline: none !important;
 			box-shadow: $textarea-focus-box-shadow-size $textarea-success-border-color;
 		}
 	}
